# TestMaker

./: CMakeLists.txt  README.md  TestMaker.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
commands/: command.cpp  command.h  loginrequest.cpp  loginrequest.h
dialogs/: editor.cpp  editor.h  editor.ui  informationdialog.cpp  informationdialog.h  informationdialog.ui  settings.cpp  settings.h  settings.ui
items/: item.cpp  item.h  itemwidget.cpp  itemwidget.h  itemwidget.ui
projectOperations/: changecontrol.cpp  changecontrol.h  openproject.cpp  openproject.h  saveproject.cpp  saveproject.h
server/: communicationserver.cpp  communicationserver.h
